2006-05-22  Katsutoshi Itoh <cut-sea@kahua.org>

	* rewrite kahua-local-session-ref used by getter-with-setter.
	
2006-05-21  Katsutoshi Itoh <cut-sea@kahua.org>

	* src/kahua/session.scm, src/kahua/server.scm
	  hold app local session variable and the value.
	  At a result, add two new low level API named as
	  kahua-local-session-ref/kahua-local-session-set!.
	  This aim is that we hold non persistent object
	  and access it not only continuation link but also
	  permanent link.
	
2006-05-21  SHIBATA Tomohisa  <shibata@kahua.org>

	* doc/Modules
	start writing texinfo document.
	
2006-05-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* */Makefile.in:
	  bindir, sbindir, libexecdir, infodir, mandir now don't make
	  the deepest level "kahua" directory.
	  ex. bindir is now @bindir@ instead of @bindir@/kahua.

2006-05-13  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* 0.4.1 released.

2006-05-13  Tatsuya BIZENN  <bizenn@arthub.net>

	* doc/Setup.ja:
	  Catch up recent changes.

	* emacs/kahua.el, emacs/kahua-shell.el:
	  Make customizable kahua-admin/kahua-shell command path
	  and process coding system for communication with them.

2006-05-12  Tatsuya BIZENN  <bizenn@arthub.net>

	* test/query.scm:
	  Avoid influence of other plugins.  Follow the fashion of test/plugin.scm.

	* test/persistence.scm, test/plugin.scm:
	  Use global-variable-bound? instead of symbol-bound?

2006-05-11  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm:
	  Close lock file port explicitly in unlock-db for <kahua-db-fs>,
	  in order to avoid lack of file descriptor.

2006-05-09  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-spvr.scm, src/kahua-keyserv.scm:
	  Set backlog of server-socket to the maximum value.

2006-04-08  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua-server.scm, src/kahua-spvr.scm, src/kahua/server.scm, test/server.scm:
	Supported :worker-uri keyword for `app-servers' file.
	Changed kahua-bridge-name defalut value to "/kahua.cgi".